objects/adapps__OptimizerPlus_Page_Layouts_X_Object_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Page_Layouts_Per_Object__c</fullName>
        <label>Page Layouts Per Object</label>
        <referenceTo>adapps__OptimizerPlus_Page_Layouts_X_Object__c</referenceTo>
        <relationshipLabel>Page Layouts Per Object Item</relationshipLabel>
        <relationshipName>Page_Layouts_Per_Object_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Page Layouts Per Object Item</label>
    <nameField>
        <label>Page Layouts Per Object Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Layouts Per Object Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>